<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greybackgroundimage"
    tools:context=".ArtistPageActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:text="@string/my_record_label">
            <TextView
                android:id="@+id/artist_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="TEXT"
                android:textSize="64sp"
                android:paddingBottom="12dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/record_label_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_label"/>
            <Button
                android:id="@+id/album_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album"/>
            <Button
                android:id="@+id/song_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song"/>
            <Button
                android:id="@+id/tour_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tour"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>